<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">
    <!--android:background="@drawable/welcome_splash"-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_splash"
        tools:layout_editor_absoluteY="271dp"
        android:contentDescription="@string/background_welcome_description" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/game_icon"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:contentDescription="@string/welcome_game_icon_description"
            android:src="@drawable/skull4_50percent" />

        <TextView
            android:id="@+id/gameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alien_encounters_italic"
            android:text="@string/myGameName"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="60sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnWelcomeNext"
        android:layout_width="133dp"
        android:layout_height="80dp"
        android:text="@string/btnWelcomeNextStr"
        android:textSize="25sp"
        android:background="@drawable/boxes6_50percent"
        android:fontFamily="@font/alien_encounters_solid_bold_italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtViewAuthorName"
        android:layout_width="318dp"
        android:layout_height="29dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/alien_encounters_solid_bold_italic"
        android:text="@string/by_author_name"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>