<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/stayrad_25percent"
        tools:layout_editor_absoluteY="5dp"
        android:contentDescription="@string/background_main_menu_description" />
    <!--android:src="@drawable/welcome_splash"-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:background="@drawable/boxes4"
            android:fontFamily="@font/alien_encounters_solid_italic"
            android:text="@string/play_button"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnOptions"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/boxes"
            android:fontFamily="@font/alien_encounters_solid_italic"
            android:text="@string/options_button"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnHelp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/boxes4"
            android:fontFamily="@font/alien_encounters_solid_italic"
            android:text="@string/help_button"
            android:textSize="30sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>