<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <ImageView
        android:id="@+id/help_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash3_50percent"
        tools:layout_editor_absoluteY="5dp"
        android:contentDescription="@string/help_background_description" />

    <LinearLayout
        android:layout_width="656dp"
        android:layout_height="366dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/alien_encounters_solid"
            android:text="@string/help_and_credits"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtHelpCredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:fadeScrollbars="false"
            android:fontFamily="@font/alien_encounters_solid_regular"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarThumbVertical="@android:color/white"
            android:scrollbars="vertical"
            android:text="@string/help_credits"
            android:textColor="#FFFFFF"
            android:textColorLink="@android:color/holo_blue_bright"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>