<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <ImageView
        android:id="@+id/help_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash3_50percent"
        tools:layout_editor_absoluteY="5dp"
        android:contentDescription="@string/background_help_description" />

    <LinearLayout
        android:layout_width="737dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alien_encounters_solid"
            android:text="@string/optionsActivity_settings"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/alien_encounters_solid"
            android:text="@string/optionsActivity_board_size"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/game_size_spinner"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:background="@drawable/boxes_border" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="192dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:fontFamily="@font/alien_encounters_solid"
            android:text="@string/optionsActivity_skulls"

            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <Spinner
            android:id="@+id/skull_spinner"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/boxes_border"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>